added simple nav bar in base html that include kanban notes calender and logout

--- a/calendar_app/templates/calendar_app/calendar_app.html
+++ b/calendar_app/templates/calendar_app/calendar_app.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}Kanban Board{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,3 +12,4 @@
     <h1>Calendar View</h1>
 </body>
 </html>
+{% endblock %}
