--- a/notes/templates/notes/notes.html
+++ b/notes/templates/notes/notes.html
@@ -1,3 +1,10 @@
+{% extends "base.html" %}
+
+{% block title %}Notes{% endblock %}
+
+{% block content %}
+<h1>Notes</h1>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,3 +14,5 @@
     <h1>Notes</h1>
 </body>
 </html>
+{% endblock %}
+
