--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}Kanban Board{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,3 +12,4 @@
     <h1>Welcome to the Kanban Board</h1>
 </body>
 </html>
+{% endblock %}
