--- a/static/css/login.css
+++ b/static/css/login.css
@@ -41,10 +41,11 @@ body {
     width: 45%;
 }
 
-.feature-column p {
-    background: url('https://img.icons8.com/ios-glyphs/30/000000/checkmark.png') no-repeat left center;
-    background-size: 20px;
-    padding-left: 30px;
+.feature-column ul {
+    padding-left: 20px;
+}
+
+.feature-column li {
     margin-bottom: 10px;
     color: #555;
 }
@@ -65,6 +66,7 @@ body {
 .login-section h2 {
     margin-top: 0;
     color: #333;
+    text-align: center;
 }
 
 .login-section form {
@@ -133,6 +135,7 @@ body {
 .auth-links a:hover {
     text-decoration: underline;
 }
+
 
 
 
