--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,6 +7,10 @@
     <title>Sign In - CanDo</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/32x32favi.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/16x16favi.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+    <link rel="icon" href="{% static 'favicon/favicon.ico' %}">
 </head>
 <body>
     <div class="logo-container">
@@ -59,6 +63,10 @@
     </div>
 </body>
 </html>
+
+
+
+
 
 
 
