--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     {% load static %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My App{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/32x32favi.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/16x16favi.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+    <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}">
 </head>
 <body>
     <div class="navbar">
@@ -17,3 +23,4 @@
     </div>
 </body>
 </html>
+
