--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -21,53 +21,27 @@ body {
     color: black;
 }
 
-.content {
-    padding: 20px;
+.navbar-brand img {
+    height: 40px;
 }
 
-.login-container {
-    width: 300px;
-    margin: 0 auto;
-    padding: 30px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-.form-group input {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-
-.btn {
-    display: inline-block;
-    padding: 10px 20px;
-    color: #fff;
-    background-color: #007bff;
+.navbar-toggler {
     border: none;
-    border-radius: 3px;
-    cursor: pointer;
 }
 
-.links {
-    margin-top: 20px;
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%28255, 255, 255, 1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
-.links a {
-    display: block;
-    margin-bottom: 10px;
-    color: #007bff;
-    text-decoration: none;
+.collapse {
+    flex-grow: 0;
+}
+
+.navbar-collapse {
+    justify-content: space-between;
+}
+
+.nav-item {
+    list-style-type: none;
 }
 
