--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -18,7 +18,7 @@
         <div class="kanban-board">
             {% for column in columns %}
                 <div class="kanban-column" data-column-id="{{ column.id }}">
-                    <div class="kanban-column-header">{{ column }}</div>
+                    <button class="kanban-column-header">{{ column }}</button>
                     <div class="kanban-column-body">
                         {% for task in tasks %}
                             {% if task.column.name == column %}
@@ -62,6 +62,20 @@
         </form>
     </div>
 </div>
+
+<div id="edit-column-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <form id="edit-column-form">
+            <input type="hidden" name="edit_column_id" id="edit-column-id">
+            <label for="edit-column-name">Edit Column Name:</label>
+            <input type="text" id="edit-column-name" name="edit-column-name" required>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="button" id="delete-column-btn" class="btn btn-danger">Delete</button>
+        </form>
+    </div>
+</div>
+
 {% endblock %}
 
 {% block extra_js %}
