--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -18,10 +18,10 @@
         <div class="kanban-board">
             {% for column in columns %}
                 <div class="kanban-column" data-column-id="{{ column.id }}">
-                    <button class="kanban-column-header">{{ column }}</button>
+                    <button class="kanban-column-header">{{ column.name }}</button>
                     <div class="kanban-column-body">
                         {% for task in tasks %}
-                            {% if task.column.name == column %}
+                            {% if task.column.name == column.name %}
                                 <div class="kanban-task" data-task-id="{{ task.id }}">
                                     <div class="kanban-task-title">{{ task.title }}</div>
                                     <div class="kanban-task-due">{{ task.due_date }}</div>
@@ -81,6 +81,7 @@
 {% block extra_js %}
 <script src="{% static 'js/kanban.js' %}"></script>
 {% endblock %}
+
 
 
 
