--- a/static/css/kanban.css
+++ b/static/css/kanban.css
@@ -78,14 +78,13 @@ body {
     display: none;
     position: fixed;
     z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
 .modal-content {
@@ -110,6 +109,9 @@ body {
     color: #888;
     margin: 0 10px;
 }
+
+
+
 
 
 
