--- a/kanban/templates/kanban/index.html
+++ b/kanban/templates/kanban/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block title %}Kanban Board{% endblock %}
 
@@ -39,20 +40,9 @@
 <div id="task-modal" class="modal">
     <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <form id="task-form">
-            <input type="hidden" name="task_id" id="task-id">
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="title" required>
-            <label for="description">Description:</label>
-            <textarea id="description" name="description" required></textarea>
-            <label for="due_date">Due Date:</label>
-            <input type="date" id="due_date" name="due_date">
-            <label for="priority">Priority:</label>
-            <select id="priority" name="priority">
-                <option value="Low">Low</option>
-                <option value="Medium">Medium</option>
-                <option value="High">High</option>
-            </select>
+        <form id="task-form" method="post" action="{% url 'kanban:create_task' %}">
+            {% csrf_token %}
+            {{ task_form|crispy }}
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
@@ -61,9 +51,9 @@
 <div id="column-modal" class="modal">
     <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <form id="column-form">
-            <label for="column-name">Column Name:</label>
-            <input type="text" id="column-name" name="column-name" required>
+        <form id="column-form" method="post" action="{% url 'kanban:create_column' %}">
+            {% csrf_token %}
+            {{ column_form|crispy }}
             <button type="submit" class="btn btn-primary">Save</button>
         </form>
     </div>
@@ -72,10 +62,13 @@
 <div id="edit-column-modal" class="modal">
     <div class="modal-content">
         <span class="close-btn">&times;</span>
-        <form id="edit-column-form">
+        <form id="edit-column-form" method="post" action="">
+            {% csrf_token %}
             <input type="hidden" name="edit_column_id" id="edit-column-id">
-            <label for="edit-column-name">Edit Column Name:</label>
-            <input type="text" id="edit-column-name" name="edit-column-name" required>
+            <div class="form-group">
+                <label for="edit-column-name">Edit Column Name:</label>
+                <input type="text" id="edit-column-name" name="edit-column-name" class="form-control" required>
+            </div>
             <button type="submit" class="btn btn-primary">Save</button>
             <button type="button" id="delete-column-btn" class="btn btn-danger">Delete</button>
         </form>
@@ -86,6 +79,8 @@
 {% block extra_js %}
 <script src="{% static 'js/kanban.js' %}"></script>
 {% endblock %}
+
+
 
 
 
