--- a/static/css/kanban.css
+++ b/static/css/kanban.css
@@ -10,6 +10,9 @@ body {
 }
 
 .button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
     margin-bottom: 20px;
 }
 
@@ -30,9 +33,9 @@ body {
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    min-width: 350px; /* Increased width */
-    max-width: 350px; /* Increased width */
-    height: 80vh; /* Adjust the height to make columns taller */
+    min-width: 350px;
+    max-width: 350px;
+    height: 80vh;
     display: flex;
     flex-direction: column;
 }
@@ -41,19 +44,19 @@ body {
     font-weight: bold;
     margin-bottom: 10px;
     text-align: center;
-    background-color: #007bff; /* Background color */
-    color: white; /* Text color */
+    background-color: #007bff;
+    color: white;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    border: none; /* Remove border */
+    border: none;
     width: 100%;
     cursor: pointer;
 }
 
 .kanban-column-body {
     flex: 1;
-    overflow-y: auto; /* Allow scrolling within columns */
+    overflow-y: auto;
 }
 
 .kanban-task {
@@ -66,7 +69,28 @@ body {
 }
 
 .kanban-task-title {
+    display: flex;
+    align-items: center;
     font-weight: bold;
+}
+
+.priority-indicator {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.priority-low {
+    background-color: #28a745;
+}
+
+.priority-medium {
+    background-color: #ffc107;
+}
+
+.priority-high {
+    background-color: #dc3545;
 }
 
 .kanban-task-due {
@@ -78,13 +102,14 @@ body {
     display: none;
     position: fixed;
     z-index: 1000;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
-    overflow: auto;
 }
 
 .modal-content {
