--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'kanban:index' %}">Kanban</a>
                     </li>
@@ -37,6 +37,10 @@
                         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                 </ul>
+                <form class="d-flex" method="get" action="{% url 'kanban:search' %}">
+                    <input class="form-control me-2" type="search" name="q" placeholder="Search tasks" aria-label="Search" required>
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </div>
         </div>
     </nav>
@@ -47,6 +51,7 @@
     {% block extra_js %}{% endblock %}
 </body>
 </html>
+
 
 
 
