--- a/templates/base.html
+++ b/templates/base.html
@@ -28,16 +28,10 @@
                         <a class="nav-link" href="{% url 'kanban:index' %}">Kanban</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'notes:index' %}">Notes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'calendar_app:index' %}">Calendar</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                 </ul>
-                <form class="d-flex" method="get" action="{% url 'kanban:search' %}">
+                <form class="d-flex" method="get" action="{% url 'kanban:search_tasks' %}">
                     <input class="form-control me-2" type="search" name="q" placeholder="Search tasks" aria-label="Search" required>
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
